--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Weather App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="card">
+      <div class="search">
+        <input type="text" class="search-bar" placeholder="Enter City" v-model="query" @keyup.enter="fetchWeather" spellcheck="false" />
+        <button @click="fetchWeather"><img src=" " alt="search" /></button>
+      </div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
