--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <div id="app" class="card">
       <div class="search">
         <input type="text" class="search-bar" placeholder="Enter City" v-model="query" @keyup.enter="fetchWeather" spellcheck="false" />
-        <button @click="fetchWeather"><img src=" " alt="search" /></button>
+        <button @click="fetchWeather"><img src="/search.png" alt="search" /></button>
       </div>
+      <div class="weather"><img src="/rain.png" alt="weather" class="weather-icon" />
+        <h1 class="temp">22°C</h1></div>
+        <h2 class="city">New York</h2>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
